--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,7 @@
     <string name="voice_to_text">Voice to Text</string>
     <string name="search_bar_text">What are you looking for?</string>
     <string name="find_next_fav">Find your next favourite book</string>
+    <string name="not_mentioned">Not authors mentioned</string>
+    <string name="no_desc">No description mentioned</string>
+    <string name="no_books_found">oops :( No books found</string>
 </resources>
