--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,7 @@
     <string name="not_mentioned">Not authors mentioned</string>
     <string name="no_desc">No description mentioned</string>
     <string name="no_books_found">oops :( No books found</string>
+    <string name="network_issue">There seems to be some issue with your internet</string>
+    <string name="bad_server">Bad server response</string>
+    <string name="price">%1$s %2$.2f</string>
 </resources>
